--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,12 @@
 
 S3method(F_meas,default)
 S3method(F_meas,table)
+S3method(ccc,data.frame)
 S3method(conf_mat,data.frame)
 S3method(conf_mat,table)
+S3method(mae,data.frame)
+S3method(mcc,data.frame)
+S3method(mcc,table)
 S3method(npv,data.frame)
 S3method(npv,matrix)
 S3method(npv,table)
@@ -14,17 +18,30 @@ S3method(precision,data.frame)
 S3method(precision,table)
 S3method(recall,data.frame)
 S3method(recall,table)
+S3method(rmse,data.frame)
+S3method(rsq,data.frame)
+S3method(rsq_trad,data.frame)
 S3method(sens,data.frame)
 S3method(sens,table)
 S3method(spec,data.frame)
 S3method(spec,table)
 S3method(summary,conf_mat)
 export(F_meas)
+export(ccc)
 export(conf_mat)
+export(mae)
+export(mcc)
 export(npv)
 export(ppv)
 export(precision)
 export(recall)
+export(rmse)
+export(rsq)
+export(rsq_trad)
 export(sens)
 export(spec)
+importFrom(dplyr,bind_cols)
 importFrom(stats,complete.cases)
+importFrom(stats,cor)
+importFrom(stats,var)
+importFrom(tibble,tibble)
