--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.0.1
 Suggests: 
-    testthat
+    testthat,
+    covr
 Imports:
     dplyr,
     tibble
