--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,8 @@ S3method(rsq,data.frame)
 S3method(rsq_trad,data.frame)
 S3method(sens,data.frame)
 S3method(sens,table)
+S3method(som_j,data.frame)
+S3method(som_j,table)
 S3method(spec,data.frame)
 S3method(spec,table)
 S3method(summary,conf_mat)
@@ -39,6 +41,7 @@ export(rmse)
 export(rsq)
 export(rsq_trad)
 export(sens)
+export(som_j)
 export(spec)
 importFrom(dplyr,bind_cols)
 importFrom(stats,complete.cases)
