Wrongly attributed J to Somers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ S3method(F_meas,table)
 S3method(ccc,data.frame)
 S3method(conf_mat,data.frame)
 S3method(conf_mat,table)
+S3method(j_index,data.frame)
+S3method(j_index,table)
 S3method(mae,data.frame)
 S3method(mcc,data.frame)
 S3method(mcc,table)
@@ -23,14 +25,13 @@ S3method(rsq,data.frame)
 S3method(rsq_trad,data.frame)
 S3method(sens,data.frame)
 S3method(sens,table)
-S3method(som_j,data.frame)
-S3method(som_j,table)
 S3method(spec,data.frame)
 S3method(spec,table)
 S3method(summary,conf_mat)
 export(F_meas)
 export(ccc)
 export(conf_mat)
+export(j_index)
 export(mae)
 export(mcc)
 export(npv)
@@ -41,7 +42,6 @@ export(rmse)
 export(rsq)
 export(rsq_trad)
 export(sens)
-export(som_j)
 export(spec)
 importFrom(dplyr,bind_cols)
 importFrom(stats,complete.cases)
