Changed accuracy to a generic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method(F_meas,default)
 S3method(F_meas,table)
+S3method(accuracy,data.frame)
+S3method(accuracy,table)
 S3method(ccc,data.frame)
 S3method(conf_mat,data.frame)
 S3method(conf_mat,table)
@@ -29,6 +31,7 @@ S3method(spec,data.frame)
 S3method(spec,table)
 S3method(summary,conf_mat)
 export(F_meas)
+export(accuracy)
 export(ccc)
 export(conf_mat)
 export(j_index)
