--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ S3method(ppv,matrix)
 S3method(ppv,table)
 S3method(precision,data.frame)
 S3method(precision,table)
+S3method(print,conf_mat)
 S3method(recall,data.frame)
 S3method(recall,table)
 S3method(rmse,data.frame)
@@ -30,6 +31,7 @@ S3method(sens,table)
 S3method(spec,data.frame)
 S3method(spec,table)
 S3method(summary,conf_mat)
+S3method(tidy,conf_mat)
 export(accuracy)
 export(ccc)
 export(conf_mat)
@@ -46,6 +48,7 @@ export(rsq)
 export(rsq_trad)
 export(sens)
 export(spec)
+importFrom(broom,tidy)
 importFrom(dplyr,bind_cols)
 importFrom(stats,complete.cases)
 importFrom(stats,cor)
