Export and documented summary method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,3 +54,5 @@ importFrom(stats,complete.cases)
 importFrom(stats,cor)
 importFrom(stats,var)
 importFrom(tibble,tibble)
+importFrom(tidyr,gather)
+importFrom(utils,globalVariables)
