Added class probability metrics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,18 +12,21 @@ S3method(j_index,table)
 S3method(mae,data.frame)
 S3method(mcc,data.frame)
 S3method(mcc,table)
+S3method(mnLogLoss,data.frame)
 S3method(npv,data.frame)
 S3method(npv,matrix)
 S3method(npv,table)
 S3method(ppv,data.frame)
 S3method(ppv,matrix)
 S3method(ppv,table)
+S3method(pr_auc,data.frame)
 S3method(precision,data.frame)
 S3method(precision,table)
 S3method(print,conf_mat)
 S3method(recall,data.frame)
 S3method(recall,table)
 S3method(rmse,data.frame)
+S3method(roc_auc,data.frame)
 S3method(rsq,data.frame)
 S3method(rsq_trad,data.frame)
 S3method(sens,data.frame)
@@ -39,19 +42,26 @@ export(f_meas)
 export(j_index)
 export(mae)
 export(mcc)
+export(mnLogLoss)
 export(npv)
 export(ppv)
+export(pr_auc)
 export(precision)
 export(recall)
 export(rmse)
+export(roc_auc)
 export(rsq)
 export(rsq_trad)
 export(sens)
 export(spec)
+importFrom(MLmetrics,PRAUC)
 importFrom(broom,tidy)
 importFrom(dplyr,bind_cols)
+importFrom(pROC,auc)
+importFrom(pROC,roc)
 importFrom(stats,complete.cases)
 importFrom(stats,cor)
+importFrom(stats,model.matrix)
 importFrom(stats,var)
 importFrom(tibble,tibble)
 importFrom(tidyr,gather)
