Laying the groundwork for issue #1 solution

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,10 +59,17 @@ importFrom(broom,tidy)
 importFrom(dplyr,bind_cols)
 importFrom(pROC,auc)
 importFrom(pROC,roc)
+importFrom(rlang,abort)
+importFrom(rlang,enquo)
+importFrom(rlang,exiting)
+importFrom(rlang,quos)
+importFrom(rlang,with_handlers)
 importFrom(stats,complete.cases)
 importFrom(stats,cor)
 importFrom(stats,model.matrix)
 importFrom(stats,var)
 importFrom(tibble,tibble)
 importFrom(tidyr,gather)
+importFrom(tidyselect,vars_pull)
+importFrom(tidyselect,vars_select)
 importFrom(utils,globalVariables)
