Remaining classification functions for issue #1

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ importFrom(pROC,roc)
 importFrom(rlang,abort)
 importFrom(rlang,enquo)
 importFrom(rlang,exiting)
+importFrom(rlang,invoke)
 importFrom(rlang,quos)
 importFrom(rlang,with_handlers)
 importFrom(stats,complete.cases)
