Code for issue #7 and minor typos

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(j_index,table)
 S3method(mae,data.frame)
 S3method(mcc,data.frame)
 S3method(mcc,table)
+S3method(metrics,data.frame)
 S3method(mnLogLoss,data.frame)
 S3method(npv,data.frame)
 S3method(npv,matrix)
@@ -42,6 +43,7 @@ export(f_meas)
 export(j_index)
 export(mae)
 export(mcc)
+export(metrics)
 export(mnLogLoss)
 export(npv)
 export(ppv)
@@ -57,6 +59,7 @@ export(spec)
 importFrom(MLmetrics,PRAUC)
 importFrom(broom,tidy)
 importFrom(dplyr,bind_cols)
+importFrom(dplyr,tibble)
 importFrom(pROC,auc)
 importFrom(pROC,roc)
 importFrom(rlang,abort)
