--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: yardstick
 Type: Package
-Title: Measuring Model Performance
+Title: Tidy Characterizations of Model Performance
 Version: 0.0.1.9000
 Authors@R: c(
     person("Max", "Kuhn", , "max@rstudio.com", c("aut", "cre")),
     person("RStudio", role = "cph"))
 Maintainer: Max Kuhn <max@rstudio.com>
-Description: Tools for quantifying how well model fits a data set.
+Description: Tidy tools for quantifying how well model fits to a data set.
+URL: https://github.com/topepo/yardstick
+BugReports: https://github.com/topepo/yardstick/issues
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
