Exporting specific methods for RPD and RPIQ

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,8 @@ S3method(recall,data.frame)
 S3method(recall,table)
 S3method(rmse,data.frame)
 S3method(roc_auc,data.frame)
+S3method(rpd,data.frame)
+S3method(rpiq,data.frame)
 S3method(rsq,data.frame)
 S3method(rsq_trad,data.frame)
 S3method(sens,data.frame)
@@ -52,6 +54,8 @@ export(precision)
 export(recall)
 export(rmse)
 export(roc_auc)
+export(rpd)
+export(rpiq)
 export(rsq)
 export(rsq_trad)
 export(sens)
@@ -68,9 +72,11 @@ importFrom(rlang,exiting)
 importFrom(rlang,invoke)
 importFrom(rlang,quos)
 importFrom(rlang,with_handlers)
+importFrom(stats,IQR)
 importFrom(stats,complete.cases)
 importFrom(stats,cor)
 importFrom(stats,model.matrix)
+importFrom(stats,sd)
 importFrom(stats,var)
 importFrom(tibble,tibble)
 importFrom(tidyr,gather)
