Add AUC and concordance methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,11 @@
 
 S3method(accuracy,data.frame)
 S3method(accuracy,table)
+S3method(auc,Surv)
+S3method(auc,data.frame)
 S3method(ccc,data.frame)
+S3method(concordance,Surv)
+S3method(concordance,data.frame)
 S3method(conf_mat,data.frame)
 S3method(conf_mat,table)
 S3method(f_meas,default)
@@ -39,7 +43,9 @@ S3method(spec,table)
 S3method(summary,conf_mat)
 S3method(tidy,conf_mat)
 export(accuracy)
+export(auc)
 export(ccc)
+export(concordance)
 export(conf_mat)
 export(f_meas)
 export(j_index)
