--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ License: GPL-2
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 6.0.1
+RoxygenNote: 6.0.1.9000
 Depends:
     R (>= 2.10),
     broom
@@ -28,4 +28,6 @@ Imports:
     pROC,
     MLmetrics,
     rlang,
-    tidyselect
+    tidyselect,
+    survAUC,
+    survival
