Added unweighted kappa for issue #2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ S3method(f_meas,default)
 S3method(f_meas,table)
 S3method(j_index,data.frame)
 S3method(j_index,table)
+S3method(kap,data.frame)
+S3method(kap,table)
 S3method(mae,data.frame)
 S3method(mcc,data.frame)
 S3method(mcc,table)
@@ -43,6 +45,7 @@ export(ccc)
 export(conf_mat)
 export(f_meas)
 export(j_index)
+export(kap)
 export(mae)
 export(mcc)
 export(metrics)
