added balanced accuracy

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method(accuracy,data.frame)
 S3method(accuracy,table)
+S3method(bal_accuracy,data.frame)
+S3method(bal_accuracy,table)
 S3method(ccc,data.frame)
 S3method(conf_mat,data.frame)
 S3method(conf_mat,table)
@@ -41,6 +43,7 @@ S3method(spec,table)
 S3method(summary,conf_mat)
 S3method(tidy,conf_mat)
 export(accuracy)
+export(bal_accuracy)
 export(ccc)
 export(conf_mat)
 export(f_meas)
