added detection prevalence for issue #2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ S3method(bal_accuracy,table)
 S3method(ccc,data.frame)
 S3method(conf_mat,data.frame)
 S3method(conf_mat,table)
+S3method(detection_prevalence,data.frame)
+S3method(detection_prevalence,table)
 S3method(f_meas,default)
 S3method(f_meas,table)
 S3method(j_index,data.frame)
@@ -46,6 +48,7 @@ export(accuracy)
 export(bal_accuracy)
 export(ccc)
 export(conf_mat)
+export(detection_prevalence)
 export(f_meas)
 export(j_index)
 export(kap)
