Added and ROC curve function for issue #16

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ S3method(recall,data.frame)
 S3method(recall,table)
 S3method(rmse,data.frame)
 S3method(roc_auc,data.frame)
+S3method(roc_curve,data.frame)
 S3method(rpd,data.frame)
 S3method(rpiq,data.frame)
 S3method(rsq,data.frame)
@@ -63,6 +64,7 @@ export(precision)
 export(recall)
 export(rmse)
 export(roc_auc)
+export(roc_curve)
 export(rpd)
 export(rpiq)
 export(rsq)
@@ -71,9 +73,13 @@ export(sens)
 export(spec)
 importFrom(MLmetrics,PRAUC)
 importFrom(broom,tidy)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,arrange)
+importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,tibble)
 importFrom(pROC,auc)
+importFrom(pROC,coords)
 importFrom(pROC,roc)
 importFrom(rlang,abort)
 importFrom(rlang,enquo)
