--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ S3method(j_index,table)
 S3method(kap,data.frame)
 S3method(kap,table)
 S3method(mae,data.frame)
+S3method(mape,data.frame)
 S3method(mcc,data.frame)
 S3method(mcc,table)
 S3method(metrics,data.frame)
@@ -54,6 +55,7 @@ export(f_meas)
 export(j_index)
 export(kap)
 export(mae)
+export(mape)
 export(mcc)
 export(metrics)
 export(mnLogLoss)
