--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ S3method(sens,table)
 S3method(spec,data.frame)
 S3method(spec,table)
 S3method(summary,conf_mat)
+S3method(tdbrier,int.reference)
 S3method(tidy,conf_mat)
 export(accuracy)
 export(bal_accuracy)
@@ -52,6 +53,12 @@ export(ccc)
 export(conf_mat)
 export(detection_prevalence)
 export(f_meas)
+export(get_cindex)
+export(get_deviance)
+export(get_tdbrier)
+export(get_tdroc)
+export(integrate.tdbrier)
+export(integrate.tdroc)
 export(j_index)
 export(kap)
 export(mae)
@@ -73,6 +80,8 @@ export(rsq)
 export(rsq_trad)
 export(sens)
 export(spec)
+export(tdbrier)
+export(tdroc)
 importFrom(MLmetrics,PRAUC)
 importFrom(broom,tidy)
 importFrom(dplyr,"%>%")
