fixing dependencies and bugs from surv functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,8 +57,8 @@ export(get_cindex)
 export(get_deviance)
 export(get_tdbrier)
 export(get_tdroc)
-export(integrate.tdbrier)
-export(integrate.tdroc)
+export(integrate_tdbrier)
+export(integrate_tdroc)
 export(j_index)
 export(kap)
 export(mae)
