--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,8 @@ Authors@R: c(
     person("RStudio", role = "cph"))
 Maintainer: Max Kuhn <max@rstudio.com>
 Description: Tidy tools for quantifying how well model fits to a data set such as confusion matrices, class probability curve summaries, and regression metrics (e.g., RMSE). 
-URL: https://github.com/topepo/yardstick
-BugReports: https://github.com/topepo/yardstick/issues
+URL: https://github.com/tidymodels/yardstick
+BugReports: https://github.com/tidymodels/yardstick/issues
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
