--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,6 +1,6 @@
 template:
-  params:
-    bootswatch: united
+  package: tidytemplate
+  default_assets: false
 
 reference:
   - title: Classification Metrics
