Initial rewrite with rmse() and rsq() implemented.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ export(kap)
 export(mae)
 export(mape)
 export(mcc)
+export(metric_set)
 export(metrics)
 export(mnLogLoss)
 export(npv)
@@ -65,12 +66,14 @@ export(pr_auc)
 export(precision)
 export(recall)
 export(rmse)
+export(rmse_vec)
 export(roc_auc)
 export(roc_curve)
 export(rpd)
 export(rpiq)
 export(rsq)
 export(rsq_trad)
+export(rsq_vec)
 export(sens)
 export(spec)
 importFrom(MLmetrics,PRAUC)
@@ -79,12 +82,15 @@ importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,tibble)
 importFrom(pROC,auc)
 importFrom(pROC,coords)
 importFrom(pROC,roc)
 importFrom(rlang,abort)
+importFrom(rlang,call2)
 importFrom(rlang,enquo)
+importFrom(rlang,eval_tidy)
 importFrom(rlang,exiting)
 importFrom(rlang,invoke)
 importFrom(rlang,quos)
