Implement rsq_trad() and ccc(). Ensure extra args can be passed to *_impl() functions (ie bias for ccc())

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ S3method(tidy,conf_mat)
 export(accuracy)
 export(bal_accuracy)
 export(ccc)
+export(ccc_vec)
 export(conf_mat)
 export(detection_prevalence)
 export(f_meas)
@@ -73,6 +74,7 @@ export(rpd)
 export(rpiq)
 export(rsq)
 export(rsq_trad)
+export(rsq_trad_vec)
 export(rsq_vec)
 export(sens)
 export(spec)
