Handle length 1 character column names. Re-implement the rest of the regression metrics.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,19 +56,24 @@ export(f_meas)
 export(j_index)
 export(kap)
 export(mae)
+export(mae_vec)
 export(mape)
+export(mape_vec)
 export(mcc)
 export(metric_set)
 export(metrics)
 export(mnLogLoss)
+export(mnLogLoss_vec)
 export(npv)
 export(ppv)
 export(pr_auc)
+export(pr_auc_vec)
 export(precision)
 export(recall)
 export(rmse)
 export(rmse_vec)
 export(roc_auc)
+export(roc_auc_vec)
 export(roc_curve)
 export(rpd)
 export(rpiq)
@@ -85,6 +90,7 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,summarise)
 importFrom(dplyr,tibble)
 importFrom(pROC,auc)
 importFrom(pROC,coords)
@@ -94,8 +100,10 @@ importFrom(rlang,call2)
 importFrom(rlang,enquo)
 importFrom(rlang,eval_tidy)
 importFrom(rlang,exiting)
+importFrom(rlang,get_expr)
 importFrom(rlang,invoke)
 importFrom(rlang,quos)
+importFrom(rlang,set_expr)
 importFrom(rlang,with_handlers)
 importFrom(stats,IQR)
 importFrom(stats,complete.cases)
@@ -103,6 +111,7 @@ importFrom(stats,cor)
 importFrom(stats,model.matrix)
 importFrom(stats,sd)
 importFrom(stats,var)
+importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,gather)
 importFrom(tidyselect,vars_pull)
