--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,10 @@ S3method(conf_mat,data.frame)
 S3method(conf_mat,table)
 S3method(detection_prevalence,data.frame)
 S3method(detection_prevalence,table)
-S3method(f_meas,default)
+S3method(f_meas,data.frame)
 S3method(f_meas,table)
 S3method(j_index,data.frame)
+S3method(j_index,matrix)
 S3method(j_index,table)
 S3method(kap,data.frame)
 S3method(kap,table)
@@ -41,48 +42,65 @@ S3method(rpiq,data.frame)
 S3method(rsq,data.frame)
 S3method(rsq_trad,data.frame)
 S3method(sens,data.frame)
+S3method(sens,matrix)
 S3method(sens,table)
 S3method(spec,data.frame)
+S3method(spec,matrix)
 S3method(spec,table)
 S3method(summary,conf_mat)
 S3method(tidy,conf_mat)
 export(accuracy)
+export(accuracy_vec)
 export(bal_accuracy)
+export(bal_accuracy_vec)
 export(ccc)
 export(ccc_vec)
 export(conf_mat)
 export(detection_prevalence)
+export(detection_prevalence_vec)
 export(f_meas)
+export(f_meas_vec)
 export(j_index)
+export(j_index_vec)
 export(kap)
+export(kap_vec)
 export(mae)
 export(mae_vec)
 export(mape)
 export(mape_vec)
 export(mcc)
+export(mcc_vec)
 export(metric_set)
 export(metrics)
 export(mnLogLoss)
 export(mnLogLoss_vec)
 export(npv)
+export(npv_vec)
 export(ppv)
+export(ppv_vec)
 export(pr_auc)
 export(pr_auc_vec)
 export(precision)
+export(precision_vec)
 export(recall)
+export(recall_vec)
 export(rmse)
 export(rmse_vec)
 export(roc_auc)
 export(roc_auc_vec)
 export(roc_curve)
 export(rpd)
+export(rpd_vec)
 export(rpiq)
+export(rpiq_vec)
 export(rsq)
 export(rsq_trad)
 export(rsq_trad_vec)
 export(rsq_vec)
 export(sens)
+export(sens_vec)
 export(spec)
+export(spec_vec)
 importFrom(MLmetrics,PRAUC)
 importFrom(broom,tidy)
 importFrom(dplyr,"%>%")
