Rewrite all documentation to reflect new updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ S3method(kap,table)
 S3method(mae,data.frame)
 S3method(mape,data.frame)
 S3method(mcc,data.frame)
+S3method(mcc,matrix)
 S3method(mcc,table)
 S3method(metrics,data.frame)
 S3method(mnLogLoss,data.frame)
