Rewrite metrics() to use metric_set(). Document metric_set().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -110,13 +110,13 @@ importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,summarise)
-importFrom(dplyr,tibble)
 importFrom(pROC,auc)
 importFrom(pROC,coords)
 importFrom(pROC,roc)
 importFrom(rlang,abort)
 importFrom(rlang,call2)
 importFrom(rlang,enquo)
+importFrom(rlang,enquos)
 importFrom(rlang,eval_tidy)
 importFrom(rlang,exiting)
 importFrom(rlang,get_expr)
