Import more from rlang for metric_set() improvements

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -115,12 +115,15 @@ importFrom(pROC,coords)
 importFrom(pROC,roc)
 importFrom(rlang,abort)
 importFrom(rlang,call2)
+importFrom(rlang,caller_env)
 importFrom(rlang,enquo)
 importFrom(rlang,enquos)
 importFrom(rlang,eval_tidy)
 importFrom(rlang,exiting)
 importFrom(rlang,get_expr)
 importFrom(rlang,invoke)
+importFrom(rlang,is_function)
+importFrom(rlang,quo_name)
 importFrom(rlang,quos)
 importFrom(rlang,set_expr)
 importFrom(rlang,with_handlers)
