--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ export(sens_vec)
 export(spec)
 export(spec_vec)
 importFrom(MLmetrics,PRAUC)
+importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
@@ -137,3 +138,4 @@ importFrom(tidyr,gather)
 importFrom(tidyselect,vars_pull)
 importFrom(tidyselect,vars_select)
 importFrom(utils,globalVariables)
+useDynLib(yardstick, .registration = TRUE)
