Document, export and test pr_curve()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ S3method(ppv,data.frame)
 S3method(ppv,matrix)
 S3method(ppv,table)
 S3method(pr_auc,data.frame)
+S3method(pr_curve,data.frame)
 S3method(precision,data.frame)
 S3method(precision,table)
 S3method(print,conf_mat)
@@ -80,6 +81,7 @@ export(ppv)
 export(ppv_vec)
 export(pr_auc)
 export(pr_auc_vec)
+export(pr_curve)
 export(precision)
 export(precision_vec)
 export(recall)
