--- a/NAMESPACE
+++ b/NAMESPACE
@@ -124,6 +124,7 @@ importFrom(rlang,exiting)
 importFrom(rlang,get_expr)
 importFrom(rlang,invoke)
 importFrom(rlang,is_function)
+importFrom(rlang,quo)
 importFrom(rlang,quo_name)
 importFrom(rlang,quos)
 importFrom(rlang,set_expr)
@@ -132,6 +133,7 @@ importFrom(stats,IQR)
 importFrom(stats,complete.cases)
 importFrom(stats,cor)
 importFrom(stats,model.matrix)
+importFrom(stats,relevel)
 importFrom(stats,sd)
 importFrom(stats,var)
 importFrom(tibble,as_tibble)
