Rewrite of summary.conf_mat to work with the new implementation. Implement conf_mat.grouped_df to return a list column. Move tidyr to suggests b/c we don't need gather().

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,14 +20,13 @@ Suggests:
     broom,
     testthat,
     covr,
-    purrr
+    purrr,
+    tidyr,
 Imports:
     dplyr,
     tibble,
-    tidyr,
     utils,
     pROC,
     MLmetrics,
     rlang,
-    tidyselect,
-    ggplot2
+    tidyselect
