--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(bal_accuracy,data.frame)
 S3method(bal_accuracy,table)
 S3method(ccc,data.frame)
 S3method(conf_mat,data.frame)
+S3method(conf_mat,grouped_df)
 S3method(conf_mat,table)
 S3method(detection_prevalence,data.frame)
 S3method(detection_prevalence,table)
@@ -105,7 +106,6 @@ importFrom(MLmetrics,PRAUC)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
-importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,summarise)
 importFrom(pROC,auc)
@@ -132,8 +132,6 @@ importFrom(stats,model.matrix)
 importFrom(stats,sd)
 importFrom(stats,var)
 importFrom(tibble,as_tibble)
-importFrom(tibble,tibble)
-importFrom(tidyr,gather)
 importFrom(tidyselect,vars_pull)
 importFrom(tidyselect,vars_select)
 importFrom(utils,globalVariables)
