name change for mn_log_loss

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,7 +23,7 @@ S3method(mcc,data.frame)
 S3method(mcc,matrix)
 S3method(mcc,table)
 S3method(metrics,data.frame)
-S3method(mnLogLoss,data.frame)
+S3method(mn_log_loss,data.frame)
 S3method(npv,data.frame)
 S3method(npv,matrix)
 S3method(npv,table)
@@ -74,8 +74,8 @@ export(mcc)
 export(mcc_vec)
 export(metric_set)
 export(metrics)
-export(mnLogLoss)
-export(mnLogLoss_vec)
+export(mn_log_loss)
+export(mn_log_loss_vec)
 export(npv)
 export(npv_vec)
 export(ppv)
