Introduce core implementation of multiclass support (macro, macro_weighted, micro) for all class metrics except probs.R, ppv, and npv

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,9 @@ Suggests:
     covr,
     purrr,
     tidyr,
-    ggplot2
+    ggplot2,
+    knitr,
+    rmarkdown
 Imports:
     dplyr,
     tibble,
@@ -35,3 +37,4 @@ LinkingTo:
     Rcpp
 Remotes:
     r-lib/generics
+VignetteBuilder: knitr
