move from broom to generics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ S3method(spec,data.frame)
 S3method(spec,matrix)
 S3method(spec,table)
 S3method(summary,conf_mat)
+S3method(tidy,conf_mat)
 export(accuracy)
 export(accuracy_vec)
 export(bal_accuracy)
@@ -104,12 +105,14 @@ export(sens)
 export(sens_vec)
 export(spec)
 export(spec_vec)
+export(tidy)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,summarise)
+importFrom(generics,tidy)
 importFrom(pROC,auc)
 importFrom(pROC,coords)
 importFrom(pROC,roc)
