--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,6 @@ RoxygenNote: 6.1.0.9000
 Depends:
     R (>= 2.10)
 Suggests: 
-    broom,
     testthat,
     covr,
     purrr,
@@ -30,6 +29,9 @@ Imports:
     pROC,
     rlang,
     tidyselect,
-    Rcpp
+    Rcpp,
+    generics
 LinkingTo: 
     Rcpp
+Remotes:
+    r-lib/generics
