Move gain/lift curves from probably -> yardstick

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,11 +12,14 @@ S3method(detection_prevalence,data.frame)
 S3method(detection_prevalence,table)
 S3method(f_meas,data.frame)
 S3method(f_meas,table)
+S3method(gain_capture,data.frame)
+S3method(gain_curve,data.frame)
 S3method(j_index,data.frame)
 S3method(j_index,matrix)
 S3method(j_index,table)
 S3method(kap,data.frame)
 S3method(kap,table)
+S3method(lift_curve,data.frame)
 S3method(mae,data.frame)
 S3method(mape,data.frame)
 S3method(mcc,data.frame)
@@ -63,10 +66,13 @@ export(detection_prevalence)
 export(detection_prevalence_vec)
 export(f_meas)
 export(f_meas_vec)
+export(gain_capture)
+export(gain_curve)
 export(j_index)
 export(j_index_vec)
 export(kap)
 export(kap_vec)
+export(lift_curve)
 export(mae)
 export(mae_vec)
 export(mape)
