Import weighted mean

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -144,6 +144,7 @@ importFrom(stats,model.matrix)
 importFrom(stats,relevel)
 importFrom(stats,sd)
 importFrom(stats,var)
+importFrom(stats,weighted.mean)
 importFrom(tibble,as_tibble)
 importFrom(tidyselect,vars_pull)
 importFrom(tidyselect,vars_select)
