Add matrix methods for recall/precision/f_meas

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(conf_mat,table)
 S3method(detection_prevalence,data.frame)
 S3method(detection_prevalence,table)
 S3method(f_meas,data.frame)
+S3method(f_meas,matrix)
 S3method(f_meas,table)
 S3method(gain_capture,data.frame)
 S3method(gain_curve,data.frame)
@@ -36,9 +37,11 @@ S3method(ppv,table)
 S3method(pr_auc,data.frame)
 S3method(pr_curve,data.frame)
 S3method(precision,data.frame)
+S3method(precision,matrix)
 S3method(precision,table)
 S3method(print,conf_mat)
 S3method(recall,data.frame)
+S3method(recall,matrix)
 S3method(recall,table)
 S3method(rmse,data.frame)
 S3method(roc_auc,data.frame)
