Add a matrix method for conf_mat(). This fixes a 3.2 and below bug as well.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(bal_accuracy,table)
 S3method(ccc,data.frame)
 S3method(conf_mat,data.frame)
 S3method(conf_mat,grouped_df)
+S3method(conf_mat,matrix)
 S3method(conf_mat,table)
 S3method(detection_prevalence,data.frame)
 S3method(detection_prevalence,matrix)
