--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,8 +72,10 @@ export(ccc_vec)
 export(conf_mat)
 export(detection_prevalence)
 export(detection_prevalence_vec)
+export(dots_to_estimate)
 export(f_meas)
 export(f_meas_vec)
+export(finalize_averaging)
 export(gain_capture)
 export(gain_curve)
 export(j_index)
@@ -88,6 +90,8 @@ export(mape_vec)
 export(mcc)
 export(mcc_vec)
 export(metric_set)
+export(metric_summarizer)
+export(metric_vec_template)
 export(metrics)
 export(mn_log_loss)
 export(mn_log_loss_vec)
