Complete conversion from using `averaging` to using `estimator`. This allows us to return a separate `.estimator` column for each metric

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,7 +75,8 @@ export(detection_prevalence_vec)
 export(dots_to_estimate)
 export(f_meas)
 export(f_meas_vec)
-export(finalize_averaging)
+export(finalize_estimator)
+export(finalize_estimator_internal)
 export(gain_capture)
 export(gain_curve)
 export(j_index)
