CRAN check fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ export(f_meas_vec)
 export(finalize_estimator)
 export(finalize_estimator_internal)
 export(gain_capture)
+export(gain_capture_vec)
 export(gain_curve)
 export(j_index)
 export(j_index_vec)
