--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,6 +126,7 @@ export(sens_vec)
 export(spec)
 export(spec_vec)
 export(tidy)
+export(validate_estimator)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
