Export get_weights() and improve developer documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ export(finalize_estimator_internal)
 export(gain_capture)
 export(gain_capture_vec)
 export(gain_curve)
+export(get_weights)
 export(j_index)
 export(j_index_vec)
 export(kap)
