--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: yardstick
 Type: Package
 Title: Tidy Characterizations of Model Performance
-Version: 0.0.1.9000
+Version: 0.0.2.9000
 Authors@R: c(
     person("Max", "Kuhn", , "max@rstudio.com", c("aut", "cre")),
+    person("Davis", "Vaughan", , "davis@rstudio.com", c("aut")),
     person("RStudio", role = "cph"))
 Maintainer: Max Kuhn <max@rstudio.com>
 Description: Tidy tools for quantifying how well model fits to a data set such as confusion matrices, class probability curve summaries, and regression metrics (e.g., RMSE). 
