--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -4,8 +4,8 @@ template:
     part_of: <a href="https://github.com/tidymodels">tidymodels</a>
     footer: yardstick is a part of the <strong>tidymodels</strong> ecosystem, a collection of modeling packages designed with common APIs and a shared philosophy.
 
-development:
-  mode: auto
+#development:
+#  mode: auto
 
 home:
   strip_header: true
