Documentation for Gini metric

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ S3method(f_meas,matrix)
 S3method(f_meas,table)
 S3method(gain_capture,data.frame)
 S3method(gain_curve,data.frame)
+S3method(gini,data.frame)
 S3method(j_index,data.frame)
 S3method(j_index,matrix)
 S3method(j_index,table)
@@ -81,6 +82,8 @@ export(gain_capture)
 export(gain_capture_vec)
 export(gain_curve)
 export(get_weights)
+export(gini)
+export(gini_vec)
 export(j_index)
 export(j_index_vec)
 export(kap)
