--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ S3method(f_meas,matrix)
 S3method(f_meas,table)
 S3method(gain_capture,data.frame)
 S3method(gain_curve,data.frame)
+S3method(huber_loss,data.frame)
 S3method(j_index,data.frame)
 S3method(j_index,matrix)
 S3method(j_index,table)
@@ -82,6 +83,8 @@ export(gain_capture)
 export(gain_capture_vec)
 export(gain_curve)
 export(get_weights)
+export(huber_loss)
+export(huber_loss_vec)
 export(j_index)
 export(j_index_vec)
 export(kap)
