--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ S3method(f_meas,table)
 S3method(gain_capture,data.frame)
 S3method(gain_curve,data.frame)
 S3method(huber_loss,data.frame)
+S3method(huber_loss_pseudo,data.frame)
 S3method(j_index,data.frame)
 S3method(j_index,matrix)
 S3method(j_index,table)
@@ -84,6 +85,8 @@ export(gain_capture_vec)
 export(gain_curve)
 export(get_weights)
 export(huber_loss)
+export(huber_loss_pseudo)
+export(huber_loss_pseudo_vec)
 export(huber_loss_vec)
 export(j_index)
 export(j_index_vec)
