--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ S3method(kap,table)
 S3method(lift_curve,data.frame)
 S3method(mae,data.frame)
 S3method(mape,data.frame)
+S3method(mase,data.frame)
 S3method(mcc,data.frame)
 S3method(mcc,matrix)
 S3method(mcc,table)
@@ -97,6 +98,8 @@ export(mae)
 export(mae_vec)
 export(mape)
 export(mape_vec)
+export(mase)
+export(mase_vec)
 export(mcc)
 export(mcc_vec)
 export(metric_set)
