Add `average_precision()` as an alternative to `pr_auc()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(accuracy,data.frame)
 S3method(accuracy,matrix)
 S3method(accuracy,table)
+S3method(average_precision,data.frame)
 S3method(bal_accuracy,data.frame)
 S3method(bal_accuracy,matrix)
 S3method(bal_accuracy,table)
@@ -69,6 +70,8 @@ S3method(summary,conf_mat)
 S3method(tidy,conf_mat)
 export(accuracy)
 export(accuracy_vec)
+export(average_precision)
+export(average_precision_vec)
 export(bal_accuracy)
 export(bal_accuracy_vec)
 export(ccc)
