--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,15 @@ language: r
 sudo: false
 cache: packages
 
-r_github_packages:
-  - r-lib/pkgdown
-  - tidyverse/tidytemplate
-
 matrix:
   include:
   - r: devel
   - r: release
     after_success:
     - Rscript -e 'covr::codecov()'
-
+    before_cache:
+    - Rscript -e 'remotes::install_cran("pkgdown")'
+    - Rscript -e 'remotes::install_github("tidyverse/tidytemplate")'
     deploy:
       provider: script
       script: Rscript -e 'pkgdown::deploy_site_github(verbose = TRUE, run_dont_run = TRUE)'
