Changed roxygen + templates to have slightly more verbose help files for classification (binary and multiclass)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,8 @@ Imports:
     rlang,
     tidyselect,
     Rcpp,
-    generics
+    generics,
+    forcats
 LinkingTo: 
     Rcpp
 VignetteBuilder: knitr
