Remove forcats dependency

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,8 +33,7 @@ Imports:
     rlang,
     tidyselect,
     Rcpp,
-    generics,
-    forcats
+    generics
 LinkingTo: 
     Rcpp
 VignetteBuilder: knitr
