--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ S3method(gain_capture,data.frame)
 S3method(gain_curve,data.frame)
 S3method(huber_loss,data.frame)
 S3method(huber_loss_pseudo,data.frame)
+S3method(iic,data.frame)
 S3method(j_index,data.frame)
 S3method(j_index,matrix)
 S3method(j_index,table)
@@ -92,6 +93,8 @@ export(huber_loss)
 export(huber_loss_pseudo)
 export(huber_loss_pseudo_vec)
 export(huber_loss_vec)
+export(iic)
+export(iic_vec)
 export(j_index)
 export(j_index_vec)
 export(kap)
