Replace usage of `invoke()` with `exec()` and bump rlang version. Closes #117.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -159,8 +159,8 @@ importFrom(rlang,caller_env)
 importFrom(rlang,enquo)
 importFrom(rlang,enquos)
 importFrom(rlang,eval_tidy)
+importFrom(rlang,exec)
 importFrom(rlang,get_expr)
-importFrom(rlang,invoke)
 importFrom(rlang,is_function)
 importFrom(rlang,quo)
 importFrom(rlang,quo_name)
