--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,7 @@ Imports:
     dplyr,
     utils,
     pROC (>= 1.15.0),
-    rlang,
+    rlang (>= 0.4.0),
     tidyselect,
     Rcpp,
     generics
