--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,10 +3,9 @@ Type: Package
 Title: Tidy Characterizations of Model Performance
 Version: 0.0.3.9000
 Authors@R: c(
-    person("Max", "Kuhn", , "max@rstudio.com", c("aut", "cre")),
-    person("Davis", "Vaughan", , "davis@rstudio.com", c("aut")),
+    person("Max", "Kuhn", , "max@rstudio.com", c("aut")),
+    person("Davis", "Vaughan", , "davis@rstudio.com", c("aut", "cre")),
     person("RStudio", role = "cph"))
-Maintainer: Max Kuhn <max@rstudio.com>
 Description: Tidy tools for quantifying how well model fits to a data set such as confusion matrices, class probability curve summaries, and regression metrics (e.g., RMSE). 
 URL: https://github.com/tidymodels/yardstick
 BugReports: https://github.com/tidymodels/yardstick/issues
