--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,7 @@ RoxygenNote: 6.1.1
 Depends:
     R (>= 2.10)
 Suggests: 
-    testthat,
+    testthat (>= 2.1.0),
     covr,
     purrr,
     tidyr,
