Most of the doc changes are just adding kap_weighted to other metrics, sorry for the spam burying the real changes. Adding more tests before I mark the PR ready, but I'm pretty sure everything is working!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,9 @@ S3method(j_index,table)
 S3method(kap,data.frame)
 S3method(kap,matrix)
 S3method(kap,table)
+S3method(kap_weighted,data.frame)
+S3method(kap_weighted,matrix)
+S3method(kap_weighted,table)
 S3method(lift_curve,data.frame)
 S3method(mae,data.frame)
 S3method(mape,data.frame)
@@ -99,6 +102,8 @@ export(j_index)
 export(j_index_vec)
 export(kap)
 export(kap_vec)
+export(kap_weighted)
+export(kap_weighted_vec)
 export(lift_curve)
 export(mae)
 export(mae_vec)
