Add system deps for dependencies for now

--- a/.github/workflows/R.yaml
+++ b/.github/workflows/R.yaml
@@ -40,6 +40,8 @@ jobs:
       - uses: r-lib/actions/setup-r@master
       - uses: r-lib/actions/setup-pandoc@master
       - uses: r-lib/actions/setup-tinytex@master
+      - name: Install system dependencies
+        run: sudo apt-get install -y libxml2-dev libssl-dev
       - name: Install dependencies
         run: Rscript -e "install.packages(c('remotes', 'rcmdcheck'))" -e "remotes::install_deps(dependencies = TRUE)"
       - name: Check
