--- a/.github/workflows/R.yaml
+++ b/.github/workflows/R.yaml
@@ -41,7 +41,7 @@ jobs:
       - uses: r-lib/actions/setup-pandoc@master
       - uses: r-lib/actions/setup-tinytex@master
       - name: Install system dependencies
-        run: sudo apt-get install -y libxml2-dev libssl-dev
+        run: sudo apt-get update && sudo apt-get install -y libxml2-dev libssl-dev
       - name: Install dependencies
         run: Rscript -e "install.packages(c('remotes', 'rcmdcheck'))" -e "remotes::install_deps(dependencies = TRUE)"
       - name: Check
