--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -10,8 +10,6 @@ README.Rmd
 README.html
 ^_pkgdown\.yml$
 contributors.md
-.github
 ^pkgdown$
 ^man-roxygen$
-^\.github/workflows/R\.yaml$
-^\.github/workflows/pr-commands\.yaml$
+^\.github$
