add spec & sens alias

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -140,10 +140,12 @@ export(rsq_trad_vec)
 export(rsq_vec)
 export(sens)
 export(sens_vec)
+export(sensitivity)
 export(smape)
 export(smape_vec)
 export(spec)
 export(spec_vec)
+export(specificity)
 export(tidy)
 export(validate_estimator)
 importFrom(Rcpp,sourceCpp)
