--- a/NAMESPACE
+++ b/NAMESPACE
@@ -141,11 +141,13 @@ export(rsq_vec)
 export(sens)
 export(sens_vec)
 export(sensitivity)
+export(sensitivity_vec)
 export(smape)
 export(smape_vec)
 export(spec)
 export(spec_vec)
 export(specificity)
+export(specificity_vec)
 export(tidy)
 export(validate_estimator)
 importFrom(Rcpp,sourceCpp)
