Adds specificity and sensitivity aliases for sens/spec functions (#136)
* add spec & sens alias

* remove first attempt

* update news file

* Tweak NEWS

* Rearrange ordering

* Add `_vec()` helpers

Co-authored-by: Davis Vaughan <davis@rstudio.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -140,10 +140,14 @@ export(rsq_trad_vec)
 export(rsq_vec)
 export(sens)
 export(sens_vec)
+export(sensitivity)
+export(sensitivity_vec)
 export(smape)
 export(smape_vec)
 export(spec)
 export(spec_vec)
+export(specificity)
+export(specificity_vec)
 export(tidy)
 export(validate_estimator)
 importFrom(Rcpp,sourceCpp)
