--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ S3method(precision,data.frame)
 S3method(precision,matrix)
 S3method(precision,table)
 S3method(print,conf_mat)
+S3method(print,metric_set)
 S3method(recall,data.frame)
 S3method(recall,matrix)
 S3method(recall,table)
