--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,8 @@ S3method(recall,matrix)
 S3method(recall,table)
 S3method(rmse,data.frame)
 S3method(roc_auc,data.frame)
+S3method(roc_aunp,data.frame)
+S3method(roc_aunu,data.frame)
 S3method(roc_curve,data.frame)
 S3method(rpd,data.frame)
 S3method(rpiq,data.frame)
@@ -130,6 +132,10 @@ export(rmse)
 export(rmse_vec)
 export(roc_auc)
 export(roc_auc_vec)
+export(roc_aunp)
+export(roc_aunp_vec)
+export(roc_aunu)
+export(roc_aunu_vec)
 export(roc_curve)
 export(rpd)
 export(rpd_vec)
