Update pkgdown index

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -30,6 +30,8 @@ reference:
   - title: Class Probability Metrics
     contents:
     - roc_auc
+    - roc_aunp
+    - roc_aunu
     - pr_auc
     - average_precision
     - gain_capture
