--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,7 +1,9 @@
+url: https://yardstick.tidymodels.org
+
 template:
   package: tidytemplate
   params:
-    part_of: <a href="https://github.com/tidymodels">tidymodels</a>
+    part_of: <a href="https://tidymodels.orgs">tidymodels</a>
     footer: yardstick is a part of the <strong>tidymodels</strong> ecosystem, a collection of modeling packages designed with common APIs and a shared philosophy.
 
 development:
