--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(average_precision,data.frame)
 S3method(bal_accuracy,data.frame)
 S3method(bal_accuracy,matrix)
 S3method(bal_accuracy,table)
+S3method(c_index,data.frame)
 S3method(ccc,data.frame)
 S3method(conf_mat,data.frame)
 S3method(conf_mat,grouped_df)
@@ -78,6 +79,8 @@ export(average_precision)
 export(average_precision_vec)
 export(bal_accuracy)
 export(bal_accuracy_vec)
+export(c_index)
+export(c_index_vec)
 export(ccc)
 export(ccc_vec)
 export(conf_mat)
