Tidy up DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,35 +1,46 @@
-Package: yardstick
 Type: Package
+Package: yardstick
 Title: Tidy Characterizations of Model Performance
 Version: 0.0.6.9000
-Authors@R: c(
-    person("Max", "Kuhn", , "max@rstudio.com", c("aut")),
-    person("Davis", "Vaughan", , "davis@rstudio.com", c("aut", "cre")),
-    person("RStudio", role = "cph"))
-Description: Tidy tools for quantifying how well model fits to a data set such as confusion matrices, class probability curve summaries, and regression metrics (e.g., RMSE). 
-URL: https://github.com/tidymodels/yardstick, https://yardstick.tidymodels.org
-BugReports: https://github.com/tidymodels/yardstick/issues
+Authors@R: 
+    c(person(given = "Max",
+             family = "Kuhn",
+             role = "aut",
+             email = "max@rstudio.com"),
+      person(given = "Davis",
+             family = "Vaughan",
+             role = c("aut", "cre"),
+             email = "davis@rstudio.com"),
+      person(given = "RStudio",
+             role = "cph"))
+Description: Tidy tools for quantifying how well model fits to a
+    data set such as confusion matrices, class probability curve
+    summaries, and regression metrics (e.g., RMSE).
 License: GPL-2
+URL: https://github.com/tidymodels/yardstick,
+    https://yardstick.tidymodels.org
+BugReports: https://github.com/tidymodels/yardstick/issues
+Depends:
+    R (>= 2.10)
+Imports:
+    dplyr,
+    generics,
+    pROC (>= 1.15.0),
+    rlang (>= 0.4.0),
+    tidyselect,
+    utils
+Suggests: 
+    covr,
+    ggplot2,
+    kableExtra,
+    knitr,
+    purrr,
+    rmarkdown,
+    testthat,
+    tidyr
+VignetteBuilder: 
+    knitr
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Depends:
-    R (>= 2.10)
-Suggests: 
-    testthat,
-    covr,
-    purrr,
-    tidyr,
-    ggplot2,
-    knitr,
-    kableExtra,
-    rmarkdown
-Imports:
-    dplyr,
-    utils,
-    pROC (>= 1.15.0),
-    rlang (>= 0.4.0),
-    tidyselect,
-    generics
-VignetteBuilder: knitr
