Implement custom metric helpers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -117,6 +117,9 @@ export(metric_vec_template)
 export(metrics)
 export(mn_log_loss)
 export(mn_log_loss_vec)
+export(new_class_metric)
+export(new_numeric_metric)
+export(new_prob_metric)
 export(npv)
 export(npv_vec)
 export(ppv)
