Tweak documentation and redocument

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ S3method(mcc,matrix)
 S3method(mcc,table)
 S3method(metrics,data.frame)
 S3method(mn_log_loss,data.frame)
+S3method(mpe,data.frame)
 S3method(npv,data.frame)
 S3method(npv,matrix)
 S3method(npv,table)
@@ -117,6 +118,8 @@ export(metric_vec_template)
 export(metrics)
 export(mn_log_loss)
 export(mn_log_loss_vec)
+export(mpe)
+export(mpe_vec)
 export(new_class_metric)
 export(new_numeric_metric)
 export(new_prob_metric)
