--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(bal_accuracy,data.frame)
 S3method(bal_accuracy,matrix)
 S3method(bal_accuracy,table)
 S3method(ccc,data.frame)
+S3method(class_cost,data.frame)
 S3method(conf_mat,data.frame)
 S3method(conf_mat,grouped_df)
 S3method(conf_mat,matrix)
@@ -83,6 +84,8 @@ export(bal_accuracy)
 export(bal_accuracy_vec)
 export(ccc)
 export(ccc_vec)
+export(class_cost)
+export(class_cost_vec)
 export(conf_mat)
 export(detection_prevalence)
 export(detection_prevalence_vec)
