Implement `classification_cost()` (#196)
* a general cost metric for classification

* edit to work with tune package

* metric set docs plus small changes

* added event_level and estimator args

* Rewrite `classification_cost()` with base R and vctrs tooling

* Update documentation cross-links

* NEWS bullet

* Add pkgdown index entry

* Use `glue::single_quote()` definition of `sQuote()` for R <= 3.5 compat

Co-authored-by: DavisVaughan <davis@rstudio.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,8 @@ Imports:
     pROC (>= 1.15.0),
     rlang (>= 0.4.0),
     tidyselect,
-    utils
+    utils,
+    vctrs (>= 0.3.6)
 Suggests: 
     covr,
     crayon,
