--- a/NAMESPACE
+++ b/NAMESPACE
@@ -119,6 +119,7 @@ export(mcc)
 export(mcc_vec)
 export(metric_set)
 export(metric_summarizer)
+export(metric_tweak)
 export(metric_vec_template)
 export(metrics)
 export(mn_log_loss)
