--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,7 @@ Imports:
     generics,
     pROC (>= 1.15.0),
     rlang (>= 0.4.0),
+    tidyr (>= 1.0.0),
     tidyselect,
     utils,
     vctrs (>= 0.3.6)
@@ -38,8 +39,7 @@ Suggests:
     probably (>= 0.0.6),
     purrr,
     rmarkdown,
-    testthat (>= 3.0.0),
-    tidyr
+    testthat (>= 3.0.0)
 VignetteBuilder: 
     knitr
 Encoding: UTF-8
