Implement skeleton for `surv_roc_curve_naive()`

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,6 +39,7 @@ Suggests:
     probably (>= 0.0.6),
     purrr,
     rmarkdown,
+    survival,
     testthat (>= 3.0.0)
 VignetteBuilder: 
     knitr
