--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ S3method(spec,data.frame)
 S3method(spec,matrix)
 S3method(spec,table)
 S3method(summary,conf_mat)
+S3method(surv_roc_curve_naive,data.frame)
 S3method(tidy,conf_mat)
 export(accuracy)
 export(accuracy_vec)
@@ -169,6 +170,8 @@ export(spec)
 export(spec_vec)
 export(specificity)
 export(specificity_vec)
+export(surv_roc_curve_naive)
+export(surv_roc_curve_naive_vec)
 export(tidy)
 export(validate_estimator)
 importFrom(dplyr,"%>%")
