Implement skeleton of `surv_roc_auc_naive()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ S3method(spec,data.frame)
 S3method(spec,matrix)
 S3method(spec,table)
 S3method(summary,conf_mat)
+S3method(surv_roc_auc_naive,data.frame)
 S3method(surv_roc_curve_naive,data.frame)
 S3method(tidy,conf_mat)
 export(accuracy)
@@ -170,6 +171,7 @@ export(spec)
 export(spec_vec)
 export(specificity)
 export(specificity_vec)
+export(surv_roc_auc_naive)
 export(surv_roc_curve_naive)
 export(surv_roc_curve_naive_vec)
 export(tidy)
